Changes in the website

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0," />
     <title>EcoGenesis</title>
     <meta name="description" content="IoT-enabled monitoring platform for sustainable manufacturing units across rural India. Real-time data, solar power tracking, and digital empowerment tools for MSMEs." />
     <meta name="author" content="EcoGenesis" />
